--- a/chameleonv2/TurboGrafx16_TC64V2.qsf
+++ b/chameleonv2/TurboGrafx16_TC64V2.qsf
@@ -25,4 +25,7 @@ set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity chameleon2_top -section_id Top
 
 
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to spi_clk
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to spi_mosi
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to mmc_cs
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
