--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mist/mist-modules"]
 	path = mist/mist-modules
 	url = https://github.com/mist-devel/mist-modules.git
+[submodule "DeMiSTify"]
+	path = DeMiSTify
+	url = https://github.com/robinsonb5/DeMiSTify
