--- a/mist/tgfx16_mist.qsf
+++ b/mist/tgfx16_mist.qsf
@@ -17,7 +17,7 @@
 # file is updated automatically by the Quartus II software
 # and any changes you make may be lost or overwritten.
 
-set_global_assignment -name TOP_LEVEL_ENTITY TGFX16_MIST_TOP
+set_global_assignment -name TOP_LEVEL_ENTITY TGFX16_Guest
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 5.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:49:11  JANUARY 31, 2006"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.1
@@ -197,6 +197,30 @@ set_global_assignment -name PHYSICAL_SYNTHESIS_MAP_LOGIC_TO_MEMORY_FOR_AREA ON
 set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC ON
 set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_RETIMING ON
 set_location_assignment PLL_1 -to pll|altpll_component|auto_generated|pll1
+set_global_assignment -name OPTIMIZE_POWER_DURING_FITTING OFF
+set_global_assignment -name ADV_NETLIST_OPT_SYNTH_WYSIWYG_REMAP OFF
+set_global_assignment -name PHYSICAL_SYNTHESIS_EFFORT NORMAL
+set_global_assignment -name SEED 1
+set_global_assignment -name OPTIMIZE_POWER_DURING_SYNTHESIS "NORMAL COMPILATION"
+set_global_assignment -name PRE_MAPPING_RESYNTHESIS ON
+set_location_assignment PIN_54 -to CLOCK_27
+set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name QIP_FILE pll.qip
+set_global_assignment -name SIGNALTAP_FILE output_files/ram.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/dio.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/cpu.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/vram.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/bsram.stp
+set_global_assignment -name CDF_FILE output_files/tgfx16_mist.cdf
+set_global_assignment -name SIGNALTAP_FILE output_files/rom.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/vdc.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/spr.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/adpcm.stp
+set_global_assignment -name VERILOG_FILE ../support/hybrid_pwm_sd_2ndorder.v
+set_global_assignment -name SDC_FILE mist.sdc
+set_global_assignment -name SDC_FILE ../tgfx16.sdc
+set_global_assignment -name QIP_FILE ../support/mist_core.qip
+set_global_assignment -name QIP_FILE ../tgfx16.qip
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 2147039 -section_id Top
@@ -291,45 +315,4 @@ set_instance_assignment -name FAST_INPUT_REGISTER ON -to SDRAM_DQ[15]
 set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to SPI_SCK
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to CONF_DATA0
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED
-set_global_assignment -name OPTIMIZE_POWER_DURING_FITTING OFF
-set_global_assignment -name ADV_NETLIST_OPT_SYNTH_WYSIWYG_REMAP OFF
-set_global_assignment -name PHYSICAL_SYNTHESIS_EFFORT NORMAL
-set_global_assignment -name SEED 1
-set_global_assignment -name OPTIMIZE_POWER_DURING_SYNTHESIS "NORMAL COMPILATION"
-set_global_assignment -name PRE_MAPPING_RESYNTHESIS ON
-set_location_assignment PIN_54 -to CLOCK_27
-set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
-set_global_assignment -name SYSTEMVERILOG_FILE TGFX16_MiST.sv
-set_global_assignment -name VERILOG_FILE data_io.v
-set_global_assignment -name VERILOG_FILE hybrid_pwm_sd.v
-set_global_assignment -name SYSTEMVERILOG_FILE sdram.sv
-set_global_assignment -name QIP_FILE "mist-modules/mist_core.qip"
-set_global_assignment -name QIP_FILE pll.qip
-set_global_assignment -name VHDL_FILE ../rtl/pce_top_extram.vhd
-set_global_assignment -name VHDL_FILE ../rtl/dpram.vhd
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/mb128.sv
-set_global_assignment -name VHDL_FILE ../rtl/huc6270.vhd
-set_global_assignment -name VHDL_FILE ../rtl/huc6260.vhd
-set_global_assignment -name VHDL_FILE ../rtl/huc6202.vhd
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/color_mix.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/cheatcodes.sv
-set_global_assignment -name VHDL_FILE ../rtl/CEGen.vhd
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/arcade.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../rtl/sdram_amr.sv
-set_global_assignment -name QIP_FILE ../rtl/HUC6280/HUC6280.qip
-set_global_assignment -name QIP_FILE ../rtl/cd/cd.qip
-set_global_assignment -name SIGNALTAP_FILE output_files/ram.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/dio.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/cpu.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/vram.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/bsram.stp
-set_global_assignment -name CDF_FILE output_files/tgfx16_mist.cdf
-set_global_assignment -name SIGNALTAP_FILE output_files/rom.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/vdc.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/spr.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/adpcm.stp
-set_global_assignment -name VERILOG_FILE ../support/hybrid_pwm_sd_2ndorder.v
-set_global_assignment -name SDC_FILE mist.sdc
-set_global_assignment -name SDC_FILE ../tgfx16.sdc
-set_global_assignment -name VERILOG_FILE board_defs.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
