--- a/mist/tgfx16_mist.qsf
+++ b/mist/tgfx16_mist.qsf
@@ -17,7 +17,7 @@
 # file is updated automatically by the Quartus II software
 # and any changes you make may be lost or overwritten.
 
-set_global_assignment -name TOP_LEVEL_ENTITY TGFX16_Guest
+set_global_assignment -name TOP_LEVEL_ENTITY TGFX16_Shared_Top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 5.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:49:11  JANUARY 31, 2006"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.1
@@ -56,7 +56,7 @@ set_global_assignment -name FLEX10K_DEVICE_IO_STANDARD LVTTL/LVCMOS
 set_global_assignment -name ON_CHIP_BITSTREAM_DECOMPRESSION ON
 set_global_assignment -name GENERATE_RBF_FILE ON
 
-set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:build_id_verilog.tcl"
+set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:../rtl/shared/build_id_verilog.tcl"
 set_global_assignment -name SMART_RECOMPILE ON
 set_global_assignment -name ENABLE_DRC_SETTINGS OFF
 set_global_assignment -name ENABLE_CLOCK_LATENCY ON
@@ -205,22 +205,20 @@ set_global_assignment -name OPTIMIZE_POWER_DURING_SYNTHESIS "NORMAL COMPILATION"
 set_global_assignment -name PRE_MAPPING_RESYNTHESIS ON
 set_location_assignment PIN_54 -to CLOCK_27
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
-set_global_assignment -name QIP_FILE pll.qip
-set_global_assignment -name SIGNALTAP_FILE output_files/ram.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/dio.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/cpu.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/vram.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/bsram.stp
-set_global_assignment -name CDF_FILE output_files/tgfx16_mist.cdf
-set_global_assignment -name SIGNALTAP_FILE output_files/rom.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/vdc.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/spr.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/adpcm.stp
-set_global_assignment -name VERILOG_FILE ../support/hybrid_pwm_sd_2ndorder.v
-set_global_assignment -name SDC_FILE mist.sdc
-set_global_assignment -name SDC_FILE ../tgfx16.sdc
-set_global_assignment -name QIP_FILE ../support/mist_core.qip
-set_global_assignment -name QIP_FILE ../tgfx16.qip
+
+set_global_assignment -name VERILOG_MACRO "SDRAM_ROWBITS=13"
+set_global_assignment -name VERILOG_MACRO "SDRAM_COLBITS=9"
+set_global_assignment -name VERILOG_MACRO "SDRAM_CL=3"
+set_global_assignment -name VERILOG_MACRO "SDRAM_tCKminCL2=10000"
+set_global_assignment -name VERILOG_MACRO "SDRAM_tRC=66000"
+set_global_assignment -name VERILOG_MACRO "SDRAM_tWR=2"
+set_global_assignment -name VERILOG_MACRO "SDRAM_tRP=15000"
+set_global_assignment -name VERILOG_MACRO "USE_CD=1"
+set_global_assignment -name VERILOG_MACRO "USE_SAVERAM=1"
+set_global_assignment -name VERILOG_MACRO "USE_6BUTTONS=1"
+
+
+
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 2147039 -section_id Top
@@ -315,4 +313,17 @@ set_instance_assignment -name FAST_INPUT_REGISTER ON -to SDRAM_DQ[15]
 set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to SPI_SCK
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to CONF_DATA0
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED
+set_global_assignment -name SDC_FILE mist.sdc
+set_global_assignment -name QIP_FILE ../rtl/shared/tgfx16.qip
+set_global_assignment -name QIP_FILE pll.qip
+set_global_assignment -name SIGNALTAP_FILE output_files/ram.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/dio.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/cpu.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/vram.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/bsram.stp
+set_global_assignment -name CDF_FILE output_files/tgfx16_mist.cdf
+set_global_assignment -name SIGNALTAP_FILE output_files/rom.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/vdc.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/spr.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/adpcm.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
